--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -18,18 +18,18 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <div class="container">
   <div class="row">
-    <div class="col col--6 img-center">
+    <div class="col col--6">
       <a href="https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848">
         <img
-          className="app-store-badge"
+          className="app-store-badge img-center"
           src={useBaseUrl('img/app-store-badges/apple-app-store-badge-en.svg')}
         />
       </a>
     </div>
-    <div class="col col--6 img-center">
+    <div class="col col--6">
       <a href="https://play.google.com/store/apps/details?id=com.helium.wallet.app">
         <img
-          className="app-store-badge"
+          className="app-store-badge img-center"
           src={useBaseUrl('img/app-store-badges/google-play-store-badge-en.svg')}
         />
       </a>
