--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -14,11 +14,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/wallets/helium-wallet-app/header.png')} />
 
-:::note Download the Helium Wallet Apps
-
 <div class="container">
   <div class="row">
-    <div class="col col--6">
+    <div class="col col--6" style={{padding: '1rem 0'}}>
       <a href="https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848">
         <img
           className="app-store-badge img-center"
@@ -26,7 +24,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         />
       </a>
     </div>
-    <div class="col col--6">
+    <div class="col col--6" style={{padding: '1rem 0'}}>
       <a href="https://play.google.com/store/apps/details?id=com.helium.wallet.app">
         <img
           className="app-store-badge img-center"
@@ -36,8 +34,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
   </div>
 </div>
-
-:::
 
 The Helium Wallet app is the trusted way to manage your tokens and identity on the Helium
 Blockchain.
