--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -35,8 +35,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
   </div>
 </div>
 
-The Helium Wallet app is the trusted way to manage your tokens and identity on the Helium
-Blockchain.
+The Helium Wallet app is the trusted way to manage your Helium tokens and identity.
 
 Some notable features:
 
@@ -48,7 +47,7 @@ Some notable features:
 - Multiple Recipient Payment Support
 
 All Hotspot Management (diagnostics, asserting location, adding Hotspots, etc) should be done via
-the [Maker Apps](/mine-hnt/maker-apps) available from the manufacturer.
+the [Maker Apps](/mine-hnt/maker-apps) available from the manufacturer of your Hotspot.
 
 ## Wallets and Accounts
 
