--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -115,15 +115,15 @@ New makers are required to have a Maker App available before HIP 19 maker approv
 - iOS App: Not Yet Available
 - Andriod App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
 
-### Controllino
+### Controllino/Conelcom
 
-- Discord : https://discord.gg/HCp6wBuhwF
+- Discord : Discontinued
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+The [Nebra app](https://docs.helium.com/mine-hnt/maker-apps#nebra) will be used to manage Controllino/Conelcom hotspots in the near future.
+Please see the update annoucement:
 
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
+https://www.nebra.com/blogs/news/nebra-ltd-providing-updates-for-controllino-conelcom-hotspots
 
-:::
 
 ### COTX
 
@@ -325,11 +325,10 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ### Pycom
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+The [Nebra app](https://docs.helium.com/mine-hnt/maker-apps#nebra) will be used to manage Pycom hotspots in the near future.
+Please see the update annoucement: 
 
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
+https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 
 ### ResIOT.io
 
