Manufacturer Requirements and Process Updates (#1076)
* [WIP] - manufacturer docs updates

* internal link fix

* maker ethics doc initial draft

* relocated maker apps page

- fixup references and links
- setup redirect
- update sidebar

* relocated original helium Hotspot docs

* update Hotspot status page, removed sync verbage

* relocate light Hotspot docs

* surface docs page editing guide

* fixup light Hotspot url slug

* open source docs frontmatter

* fixup frontmatter

* open source link fix

* more link fixes

* sidebar cleanup

* url slug fixups, comment-ify todos

* frontmatter fixes

* pulling content from notion

* maker sidebar added

* Hotspot audit process

* “HIP19” -> “HIP-19”

* 5G Hotspot requirements doc

* formatting

* typo and sidebar shuffle

* formatting clarifications

* 5G Hotspot Hardware Specification

* update sidebar

* formatting from feedback

--- a/docs/faq/docs-installation.mdx
+++ b/docs/faq/docs-installation.mdx
@@ -1,11 +1,11 @@
 ---
 id: docs-installation
-title: Installation
-pagination_label: Installation
-sidebar_label: Installation Guide
-description: Helium Documentation
+title: Docs Installation Guide
+pagination_label: Docs Installation Guide
+sidebar_label: Contributing Documentation
+description: Docs Installation Guide
 image: https://i.imgur.com/bWAbESE.png
-slug: /open-source/docs-installation
+slug: /faq/docs-installation
 ---
 
 # Helium Documentation Installation Guide
