--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -195,7 +195,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img className="docicon" src={useBaseUrl('img/icons/dociconred.svg')} /> Helium Improvement
         Proposals
       </a>
-      <a className="block" href="/open-source">
+      <a className="block" href="/faq/open-source">
         <img className="docicon" src={useBaseUrl('img/icons/dociconred.svg')} /> Open Source
         Software
       </a>
