--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -27,7 +27,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
             <a href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing">
               <span class="badge badge--secondary">Maker Approval</span>
             </a>
-            <a href="/mine-hnt/maker-apps">
+            <a href="/hotspot-makers/maker-apps">
               <span class="badge badge--secondary">Maker Apps</span>
             </a>
             <a href="/mine-hnt/understanding-hotspot-status">
@@ -89,7 +89,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <p style={{ marginBottom: 40 }}>
           These Hotspots use Validators to get information about the HNT blockchain, Participate in
           Proof of Coverage rewards, and get rewarded for forwarding Data Packets. Details{' '}
-          <a href="https://docs.helium.com/mine-hnt/light-hotspots">can be found here</a>.
+          <a href="https://docs.helium.com/hotspot-makers/light-hotspots">can be found here</a>.
         </p>
       </div>
     </div>
@@ -108,7 +108,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <h3>Maker Apps</h3>
         <p style={{ marginBottom: 40 }}>
           Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting.{' '}
-          <a href="/mine-hnt/maker-apps">Read more here</a>
+          <a href="/hotspot-makers/maker-apps">Read more here</a>
         </p>
       </div>
     </div>
