--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -2,7 +2,7 @@
 id: devices
 title: Helium Devices
 pagination_label: Helium Devices
-sidebar_label: Introduction
+sidebar_label: Helium Devices
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices
