--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -23,7 +23,7 @@ in the [Helium Wallet app](/wallets/helium-wallet-app).
 
 The original Helium app [will be stripped of functionality](/wallets#sunsetting-the-helium-app) in
 phases, with transactions being moved to the Helium Wallet app and Hotspot maintenance moving to
-[Maker apps](/mine-hnt/maker-apps).
+[Maker apps](/hotspot-makers/maker-apps).
 
 The sections below provide more information about the different Wallets and what can be expected as
 part of the blockchain migration.
