--- a/docs/faq/open-source.mdx
+++ b/docs/faq/open-source.mdx
@@ -2,10 +2,10 @@
 id: open-source
 title: Open Source
 pagination_label: Open Source
-sidebar_label: Overview
-description: Helium Documentation
-image: https://i.imgur.com/bWAbESE.png
-slug: /open-source
+sidebar_label: Open Source
+description: Open Source
+# Image:
+slug: /faq/open-source
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -14,12 +14,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Helium is Open Source
 
-The Helium Network is built almost entirely on open source code. And we actively encourage the
+The Helium Network is built almost entirely on open-source code. And we actively encourage the
 community to develop and contribute to all parts of the Network. Below is a subset of the code that
 plays an integral role in the Helium Network. The full list can be found on the official
 [Helium GitHub Organization](https://github.com/helium).
 
-### Helium Blockchain
+## Helium Blockchain
 
 These are the core libraries and repos that make up the Helium blockchain. Most things here are
 written in Erlang.
@@ -41,16 +41,20 @@ written in Erlang.
 
 - [Erlang libp2p](https://github.com/helium/erlang-libp2p) - Libp2p swarms written in (you guessed
   it) Erlang.
+
 - [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) - Command Line Interface, written
   in Rust, used to create and administer Helium wallets, and interact with the Helium Network.
+
 - [Helium JS](https://github.com/helium/helium-js) - Typescript SDKs for interacting with the Helium
   blockchain.
+
 - [Packet Purchaser](https://github.com/helium/packet-purchaser) - Service that buys Helium LoRaWAN
   packets from the Network and delivers them to a target LoRaWAN Network server.
+
 - [Angry Purple Tiger](https://github.com/helium/angry-purple-tiger) - Ever wonder how your Miner
   got its cute little animal name? Here it is.
 
-### LoRaWAN
+## LoRaWAN
 
 The Helium Network is the largest, public LoRaWAN network in the world. This is some of the code
 that makes it possible.
@@ -79,8 +83,10 @@ that makes it possible.
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all things Helium.
   (You're reading them.)
 
-  - [Installation](/open-source/docs-installation) - How to install the needed components to start
-    helping docs development.
+- # [Helium IOT Mappers](https://github.com/helium/mappers/) - Community generated coverage map of the
+
+  - [Installation](/faq/docs-installation) - How to install the needed components to start helping
+    docs development.
 
 - [Helium Mappers](https://github.com/helium/mappers/) - Community generated coverage map of the
   Helium network using real-world testing.
