--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -52,7 +52,7 @@ Some notable features:
 - Multiple Recipient Payment Support
 
 All Hotspot Management (diagnostics, asserting location, adding Hotspots, etc) should be done via
-the [Maker Apps](/mine-hnt/maker-apps) available from the manufacturer.
+the [Maker Apps](/hotspot-makers/maker-apps) available from the manufacturer.
 
 ## Wallets and Accounts
 
