IOT Premine and Migration (#1116)
* Hotspot maker docs rewrite

* Hotspot maker migration updates

* link fixes

* exchange migration guide updates

* minor clarification of intro

Co-Authored-By: Joey Hiller <1965053+jthiller@users.noreply.github.com>

* formatting and frontmatter

* trivial typographical change in hotspot-operator.mdx

* Edit TODO from link to prevent rendering

* removed double slash from redirect paths

---------

Co-authored-by: Saltiok <126745605+Saltiok@users.noreply.github.com>
Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>
Co-authored-by: Darwin Rinderer <darwin@helium.foundation>

--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -1,9 +1,9 @@
 ---
 id: blockchain-node
-title: Blockchain Node
+title: Blockchain Node Migration Guide
 pagination_label: Blockchain Node
 sidebar_label: Blockchain Node
-description: Helium Blockchain Node Documentation
+description: Helium Blockchain Node Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/blockchain-node
 ---
