--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -1,11 +1,11 @@
 ---
-id: maker
-title: Maker App 2.0 Upgrade Guide
-pagination_label: Maker Migration
-sidebar_label: Maker Migration
-description: Helium Maker Migration Documentation
+id: hotspot-maker
+title: Hotspot Maker Migration Guide
+pagination_label: Hotspot Maker
+sidebar_label: Hotspot Maker
+description: Helium Hotspot Maker Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /solana/migration/maker
+slug: /solana/migration/hotspot-maker
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -16,7 +16,16 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 :::
 
-## Update and add new dependencies
+## Maker App Updates
+
+:::info Full Diff
+
+The diff containing all of these changes can be found here:
+[Feature/solana · PR #52 · helium/maker-starter-app](https://github.com/helium/maker-starter-app/pull/52/files?diff=split&w=1)
+
+:::
+
+### Update and Add New Dependencies
 
 ```json
 "@helium/address": "^4.8.1",
@@ -32,7 +41,7 @@ The documentation on Solana and the upcoming Migration is under development and 
 "stream": "^0.0.2"
 ```
 
-# Update Babel Config to alias crypto library
+### Update Babel Config to Alias crypto Library
 
 ```jsx
 // babel.config.js
@@ -74,7 +83,7 @@ module.exports = (api) => {
 }
 ```
 
-# Update App Providers
+### Update App Providers
 
 Apps must now be wrapped in a `<SolanaProvider>` and the `baseUrl` for `<OnboardingProvider>` has
 changed
@@ -119,13 +128,17 @@ useEffect(() => {
 {/* The Rest of your app... */}
 ```
 
-# Testing Solana pre-transition
+### Testing Solana pre-transition
 
-Before the migration to Solana has completed the v2 onboarding server will be used and transactions
-will still be submitted to the Helium blockchain. To test Solana before transition use these
-variables.
+Before the Solana Migration has completed the v2 onboarding server will be used and transactions
+will still be submitted to the Helium blockchain. Use these variables to test Solana before the
+Migration.
 
-**_IT IS CRITICALLY IMPORTANT THAT YOU ONLY USE THESE FOR TESTING._**
+:::danger Testing Only
+
+**IT IS CRITICALLY IMPORTANT THAT YOU ONLY USE THESE FOR TESTING.**
+
+:::
 
 ```tsx
 // src/App.tsx
@@ -148,7 +161,7 @@ ONBOARDING_MAKER_NAME="Test Maker"
 
 ---
 
-# Onboarding a hotspot
+## Hotspot Onboarding
 
 When onboarding a Hotspot you must specify which `hotspotTypes` it supports (eg `iot` , `mobile`)
 
@@ -193,11 +206,11 @@ setSolanaTransactions(onboardData.solanaTransactions)
 
 ---
 
-# Updating a hotspot
+## Hotspot Updating
 
 When updating a Hotspot you must specify which `hotspotTypes` it supports (eg `iot` , `mobile`)
 
-## Create transactions
+### Create Update Transactions
 
 ```tsx
 // src/features/hotspots/setup/HotspotSetupConfirmLocationScreen.tsx
@@ -220,7 +233,7 @@ setSolanaTransactions(data.solanaTransactions)
 
 ---
 
-# Transferring a Hotspot
+## Hotspot Transfers
 
 ```tsx
 // src/features/transferHotspot/TransferHotspot.tsx
@@ -235,7 +248,7 @@ const { solanaTransactions, transferHotspotTxn } = await createTransferTransacti
 
 ---
 
-# Linking to Helium Wallet App for signing
+## Link to Helium Wallet App for Signing
 
 You must add `solanaTransactions` to the signature request
 
@@ -256,7 +269,7 @@ Linking.openURL(url)
 
 ---
 
-# Submit signed transaction(s)
+### Submit Signed Transaction(s)
 
 ```tsx
 // src/features/hotspots/setup/HotspotTxnsSubmitScreen.tsx
@@ -273,13 +286,19 @@ const { pendingAssertTxn, pendingGatewayTxn, pendingTransferTxn, solanaTxnIds } 
 
 ---
 
----
+## Fetching Hotspots
 
-# Fetching Hotspots
+:::info coming soon
 
 <!-- TODO: Show how this is done -->
 
-## Update wallet link
+more information coming soon.
+
+:::
+
+---
+
+## Update Wallet Link
 
 The Helium Hotspot App is deprecated, Maker Apps should link to the Helium Wallet App. Add the hook
 `useCheckWalletLink()` to `src/App.tsx` It will check to see if the user is linked to the Hotspot
@@ -319,16 +338,12 @@ const importAccount = useCallback(() => {
 
 ---
 
-## Full diff can be found here
+## Data Credits and SOL for Onboarding
 
-[Feature/solana by matthewcarlreetz · Pull Request #52 · helium/maker-starter-app](https://github.com/helium/maker-starter-app/pull/52/files?diff=split&w=1)
+:::info coming soon
 
----
+<!-- TODO: We need to create an easy way for makers to get SOL and data credits into their accounts -->
 
-## Data Credits and Sol for Onboarding
+more information coming soon.
 
-<!-- TODO: We need to create an easy way for makers to get sol and data credits into their accounts -->
-
-```
-
-```
+:::
