--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -14,22 +14,20 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/wallets/helium-wallet-app/header.png')} />
 
-:::note Download the Helium Wallet Apps
-
 <div class="container">
   <div class="row">
-    <div class="col col--6 img-center">
+    <div class="col col--6" style={{padding: '1rem 0'}}>
       <a href="https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848">
         <img
-          className="app-store-badge"
+          className="app-store-badge img-center"
           src={useBaseUrl('img/app-store-badges/apple-app-store-badge-en.svg')}
         />
       </a>
     </div>
-    <div class="col col--6 img-center">
+    <div class="col col--6" style={{padding: '1rem 0'}}>
       <a href="https://play.google.com/store/apps/details?id=com.helium.wallet.app">
         <img
-          className="app-store-badge"
+          className="app-store-badge img-center"
           src={useBaseUrl('img/app-store-badges/google-play-store-badge-en.svg')}
         />
       </a>
@@ -37,10 +35,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
   </div>
 </div>
 
-:::
-
-The Helium Wallet app is the trusted way to manage your tokens and identity on the Helium
-Blockchain.
+The Helium Wallet app is the trusted way to manage your Helium tokens and identity.
 
 Some notable features:
 
