fix maker migration links

--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -76,7 +76,7 @@ The following are migration guides for different users of Helium:
 - [Hotspot Owner](/solana/migration/hotspot-operator)
 - [Ledger User](/solana/migration/ledger)
 - [LoRaWAN Network User](/solana/migration/network-user)
-- [Maker](/solana/migration/hotspot-maker)
+- [Maker](/solana/migration/maker)
 
 ---
 
