--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -30,7 +30,7 @@ Hotspots. Read more about this upcomging change on the
 
 The original Helium app [will be stripped of functionality](/wallets#sunsetting-the-helium-app) in
 phases, with transactions being moved to the Helium Wallet app and Hotspot maintenance moving to
-[Maker apps](/mine-hnt/maker-apps).
+[Maker apps](/hotspot-makers/maker-apps).
 
 All Helium Wallets will need to be migrated to the Solana blockchain. The sections below provide
 more information about the different Wallets and what can be expected as part of the blockchain
