--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -134,12 +134,10 @@ https://www.nebra.com/blogs/news/nebra-ltd-providing-updates-for-controllino-con
 ### Dragino
 
 - Discord : https://discord.gg/KSwbc6EsRJ
+- Android App: Follow the instructions below to download the Android Maker App
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+    [Dragino Wiki: Onboarding Hotspot via Dragino App](http://8.211.40.43:8080/xwiki/bin/view/Main/User%20Manual%20for%20All%20Gateway%20models/HP0D/#H2.3OnboardingHotspotviaDraginoApp)
 
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
 
 ### Dusun
 
