--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -113,7 +113,7 @@ New makers are required to have a Maker App available before HIP 19 maker approv
 
 - Discord : https://discord.gg/unJjAtZHBZ
 - iOS App: Not Yet Available
-- Andriod App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
+- Android App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
 
 ### Controllino/Conelcom
 
