--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -113,20 +113,18 @@ New makers are required to have a Maker App available before HIP 19 maker approv
 
 - Discord : https://discord.gg/unJjAtZHBZ
 - iOS App: Not Yet Available
-- Andriod App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
+- Android App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
 
 ### Controllino/Conelcom
 
-The [Nebra app](https://docs.helium.com/mine-hnt/maker-apps#nebra) will be used to manage Controllino/Conelcom hotspots in the near future.
-Please see the update annoucement:
+The [Nebra app](https://docs.helium.com/mine-hnt/maker-apps#nebra) will be used to manage
+Controllino/Conelcom hotspots in the near future. Please see the update annoucement:
 
 https://www.nebra.com/blogs/news/nebra-ltd-providing-updates-for-controllino-conelcom-hotspots
-
 
 ### COTX
 
 - Discord : https://discord.gg/s8NAKj7Vfx
-- Maker Apps: https://support.cotxnetworks.com/
 - iOS App: https://apps.apple.com/app/cotx/id1605937419
 - Android App: https://play.google.com/store/apps/details?id=com.cotxnetworks
 - Web Dashboard: https://www.cotx-sg.io/login
@@ -134,12 +132,8 @@ https://www.nebra.com/blogs/news/nebra-ltd-providing-updates-for-controllino-con
 ### Dragino
 
 - Discord : https://discord.gg/KSwbc6EsRJ
-
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
+- Android App: Follow the instructions below to download the Android Maker App
+  - [Dragino Wiki: Onboarding Hotspot via Dragino App](http://8.211.40.43:8080/xwiki/bin/view/Main/User%20Manual%20for%20All%20Gateway%20models/HP0D/#H2.3OnboardingHotspotviaDraginoApp)
 
 ### Dusun
 
@@ -150,23 +144,20 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### EDATEC / EDA-IoT
 
 - Discord : https://discord.gg/SKwEeSreJu
-- Maker Apps: https://www.eda-iot.com/Guides/Hotspot-App/#download-eda-iot-hotspot-app
 - iOS App: https://apps.apple.com/us/app/eda-iot-hotspot/id1629546243
 - Android App: https://play.google.com/store/apps/details?id=com.edaiot.makerapp
 
 ### Embit
 
-- Maker Apps: https://www.embitminer.com/slides/embit-hot-spot-app-8
-
 :::note This Maker has not yet submitted an App for inclusion on this page.
 
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
+As of March 2023 apps are
+[listed as "Coming Soon" on the embit website](https://www.embitminer.com/slides/embit-hot-spot-app-8).
 
 :::
 
 ### Finestra (Mimiq)
 
-- Maker Apps: https://thefinestra.com/install/
 - iOS App: https://apps.apple.com/us/app/finestraminer-app/id1614250948
 - Android App: https://play.google.com/store/apps/details?id=com.mimiq.finestraminerapp
 - Web Dashboard: https://thefinestra.com/#cloud-dashboard-m |
@@ -179,28 +170,24 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### Helium (Own brand)
 
 - Discord : https://discord.gg/helium
-- Maker Apps: https://docs.helium.com/wallets/app-wallet
 - iOS App: https://apps.apple.com/us/app/helium-hotspot/id1450463605
 - Android App: https://play.google.com/store/apps/details?id=com.helium.wallet
 
 ### Heltec
 
 - Discord : https://discord.gg/Pt85TrZfxZ
-- Maker Apps: https://heltec.org/maker-app
-- iOS App: https://apps.apple.com/app/heltec-hotspot/id6444391876 (Chengdu Huilite Automation)
+- iOS App: https://apps.apple.com/app/heltec-hotspot/id6444391876
 - Android App: Download from Maker-Apps page
 
 ### Hummingbird
 
 - Discord : https://discord.gg/wUk9nfFGZW
-- Maker Apps: https://www.xdt.com/app.html
-- iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261 (Dealuse Technology Inc)
+- iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261
 - Android App: Download from Maker-Apps page
 
 ### Kerlink
 
 - Discord : https://discord.gg/9sYADWvZPg (Miner support)
-- Maker Apps: https://wikikerlink.fr/helium/doku.php?id=wiki:helium:klkapp
 - iOS App: https://apps.apple.com/fr/app/kerlink-helium-hotspot/id1613698129
 - Android App: https://play.google.com/store/apps/details?id=com.kerlink.heliumhotspot&hl=fr&gl=US
 
@@ -212,7 +199,6 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### Linxdot
 
 - Discord : https://discord.gg/WZufQURR7m
-- Maker Apps: https://www.linxdot.com/the-linxdot-app-has-landed/
 - iOS App: https://apps.apple.com/lv/app/linxdot-hotspot/id1605551724
 - Android App: https://play.google.com/store/apps/details?id=com.linxdot.companionapp&hl=en_GB&gl=US
 
@@ -241,14 +227,11 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### MNTD / RAK Wireless
 
 - Discord : https://discord.gg/j92Nu5nmP9
-- Maker Apps: https://getmntd.com/#mntd.-app
 - iOS App: https://apps.apple.com/ch/app/mntd-helium-hotspot-manager/id1595569593
 - Android App: https://play.google.com/store/apps/details?id=com.getmntd.wallet
 
 ### Nebra
 
-- Unofficial Discord : https://discord.gg/xWPDTj5ufx
-- Maker Apps: https://support.nebra.com/support/solutions/articles/24000077562-nebra-helium-app
 - iOS App: https://apps.apple.com/gb/app/nebra-hotspot/id1617299471
 - Android App: https://play.google.com/store/apps/details?id=com.nebra.helium.maker
 
@@ -303,7 +286,6 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### Pisces (GreenPalm)
 
 - Discord : https://discord.gg/cBwEUxHcn4
-- Maker Apps: https://docs.piscesminer.com/pisces-document/piscesiot-app/release-and-download
 - iOS App: https://apps.apple.com/cn/app/pisceshotspot/id1615544069
 - Android App: https://play.google.com/store/apps/details?id=com.pisces.pisces
 
@@ -315,15 +297,14 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### Proton (Atom)
 
 - Discord : https://discord.gg/sBQP69fcGd
-- Maker Apps: https://www.atomdesign.io/links
 - iOS App: https://apps.apple.com/us/app/proton-hotspot/id1616846283
 - Android App: https://play.google.com/store/apps/details?id=io.atomdesign.proton&gl=ZA&pli=1
 - Web Dashboard: https://www.atomdesign.io/proton/
 
 ### Pycom
 
-The [Nebra app](https://docs.helium.com/mine-hnt/maker-apps#nebra) will be used to manage Pycom hotspots in the near future.
-Please see the update annoucement: 
+The [Nebra app](https://docs.helium.com/mine-hnt/maker-apps#nebra) will be used to manage Pycom
+hotspots in the near future. Please see the update annoucement:
 
 https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 
@@ -342,7 +323,6 @@ https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 ### SenseCAP
 
 - Discord : https://discord.gg/QqMgVwHT3X
-- Maker Apps: https://www.sensecapmx.com/docs/sesnecap-hotspot-app/download-app/
 - iOS App: https://apps.apple.com/us/app/sensecap-hotspot/id1600051150
 - Android App: https://play.google.com/store/apps/details?id=com.sensecapmx.hotspot
 - Web Dashboard: https://status.sensecapmx.cloud/
@@ -351,12 +331,9 @@ https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 
 - Discord : https://discord.gg/45dhnE3bdd
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::caution This Maker is in liquidation and unlikely to release an App.
 
-The company is in liquidation and unlikely to release one. Check the Helium Discord for support by
-other vendors.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
+Check the Helium Discord for support by other vendors.
 
 :::
 
