homepage Solana migration headers

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -12,44 +12,62 @@ hide_table_of_contents: true
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-<div class="container" style={{padding: 0}}>
-	<div class="row">
-	<div class="col col--12">
-		<img className="docsheader" style={{marginBottom: 50}} src={useBaseUrl("img/home/docsheader.png")} />
-	</div>
-		<div class="col col--6">
-			<h1 className="bigger">Get Started <br/>with Helium</h1>
-			<h2 className="subtitle">Build amazing connected solutions on the world’s largest decentralized wireless network.</h2>
-    	</div>
-    	<div class="col col--6">
-    		<a className="quicklink" href="/blockchain">Learn about the Helium Blockchain <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    			<a className="quicklink quicklinkblue" href="/mine-hnt">Learn about mining HNT <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    							<a className="quicklink quicklinkgreen" href="/use-the-network">Build Devices to use the Network <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    			<a className="quicklink quicklinkred" href="/community-governance">Submit a Helium Improvement Proposal (HIP) <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    	</div>
-    </div>
-
-</div>
-<div class="container" style={{padding: 0}}>
-<hr />
-</div>
-
 <div class="container" style={{ padding: 0 }}>
   <div class="row">
-    <div class="col col--12">
-      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/5gheader.png')} />
-    </div>
     <div class="col col--6">
-      <h1 className="bigger">Helium 5G</h1>
-      <h2 className="subtitle">5G comes to the People's Network.</h2>
-    </div>
-    <div class="col col--6">
-      <a className="quicklink quicklinkgreen" href="/5g-on-helium">
-        Learn about 5G on Helium
+      <img
+        className="docsheader"
+        style={{ marginBottom: 50 }}
+        src={useBaseUrl('img/home/docs-header-narrow.png')}
+      />
+      <h1 className="bigger">
+        Get Started <br /> with Helium
+      </h1>
+      <h2 className="subtitle">
+        Build amazing connected solutions on the world’s largest decentralized wireless network.
+      </h2>
+      <a className="quicklink" href="/blockchain">
+        Learn about the Helium Blockchain{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
-      <a className="quicklink quicklinkblue" href="/5g-on-helium/mobile-poc">
-        Learn about mining MOBILE
+      <a className="quicklink quicklinkorange" href="/mine-hnt">
+        Learn about mining HNT{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkgreen" href="/use-the-network">
+        Build Devices to use the Network{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkred" href="/community-governance">
+        Submit a Helium Improvement Proposal (HIP){' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+    </div>
+    <div class="col col--6">
+      <img
+        className="docsheader"
+        style={{ marginBottom: 50 }}
+        src={useBaseUrl('img/home/solana-migration-narrow.png')}
+      />
+      <h1 className="bigger">
+        Helium Migration <br />
+        to Solana
+      </h1>
+      <h2 className="subtitle">The Helium Network is migrating to the Solana blockchain.</h2>
+      <a className="quicklink" href="/solana">
+        Learn more about Solana{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkorange" href="/solana/primer">
+        Get a Primer on Solana Programming{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkgreen" href="/oracles">
+        Learn about Oracles{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkred" href="/solana-migration-progress">
+        Keep Up With Migration Progress{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
     </div>
@@ -65,7 +83,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     <div class="col col--12">
       <h2>Introduction</h2>
     </div>
-    <div class="col col--6">
+    <div class="col col--12">
       <p>
         Helium is a global, distributed network of Hotspots that create public, long-range wireless
         coverage for LoRaWAN-enabled IoT devices. Hotspots produce and are compensated in HNT, the
@@ -75,20 +93,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <a href="https://explorer.helium.com/hotspots">hundreds of thousands of Hotspots</a>,
         provide access to the largest LoRaWAN Network in the world.
       </p>
-    </div>
-    <div class="col col--6">
-      <p>
-        This documentation provides details on the technology that underpins Helium, as well as how
-        to mine HNT, and how to deploy IoT devices that use the Helium Network. Start your journey
-        below.{' '}
-      </p>
       <p>
         If, at any time, you don't find what you need, join us in{' '}
         <a href="https://discord.gg/helium">our Discord</a>.
       </p>
-      <p style={{ fontWeight: 600 }}>Thanks for being a part of Helium.</p>
     </div>
   </div>
+</div>
+
+<div class="container" style={{ padding: 0 }}>
+  <hr />
 </div>
 
 <div class="container" style={{ padding: 0, paddingTop: 100 }}>
@@ -202,9 +216,11 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
   </div>
 </div>
+
 <div class="container" style={{ padding: 0 }}>
   <hr />
 </div>
+
 <div class="container" style={{ padding: 0, paddingTop: 100 }}>
   <div class="row">
     <div class="col col--12" style={{ marginBottom: 50 }}>
