migration guide link to Hotspot migration for now

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -66,8 +66,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Learn about Oracles{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
-      <a className="quicklink quicklinkred" href="/solana-migration-progress">
-        Keep Up With Migration Progress{' '}
+      <a className="quicklink quicklinkred" href="solana/migration/hotspot-operator">
+        Read the Migration Guides{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
     </div>
