migration overview page

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -66,7 +66,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Learn about Oracles{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
-      <a className="quicklink quicklinkred" href="solana/migration/hotspot-operator">
+      <a className="quicklink quicklinkred" href="solana/migration">
         Read the Migration Guides{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
