--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -1,16 +1,14 @@
 ---
 id: migration-overview
-title: Solana Migration Progress
-pagination_label: Solana Migration Progress
-sidebar_label: Solana Migration Progress
-description: Solana Migration Progress
+title: Solana Migration Overview
+pagination_label: Solana Migration Overview
+sidebar_label: Solana Migration Overview
+description: Solana Migration Overview
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
-
-# Helium Is Moving To Solana
 
 <!--TODO: header description, 2 sentences or less  -->
 
