Fix typo in code example.

--- a/docs/solana/primer.mdx
+++ b/docs/solana/primer.mdx
@@ -56,7 +56,13 @@ Solana apps to be composable with one another.
 
 A PDA is a Public Key that is derived from some set of seeds and a given program ID. Think of it as
 a one-way hashing to a new address. So, for example,
-`getProgramAddress([Buffer.from("helium", "utf8)], helium_sub_daos.programId)` will always return
+
+<!--- prettier-ignore -->
+```
+getProgramAddress([Buffer.from("helium", "utf8")], helium_sub_daos.programId)
+```
+
+will always return
 the same address. Better yet, the `helium_sub_daos` is able to sign transactions as if it held the
 private key to this PDA.
 
