Add docs around wallet app users

--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -50,6 +50,7 @@ The following are migration guides for different users of Helium:
 - [Ledger User](./solana/migration/ledger)
 - [LoRaWAN Network User](./solana/migration/network-user)
 - [Maker](./solana/migration/maker)
+- [Wallet App User](./solana/migration/wallet-app)
 
 ## Programs
 
