mark doc as draft and remove from home page links

--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -6,6 +6,7 @@ sidebar_label: Solana Migration Overview
 description: Solana Migration Overview
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration
+draft: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
