--- a/docs/solana/migration/wallet-app.mdx
+++ b/docs/solana/migration/wallet-app.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Testing Tokens
 
-All tokens in the preview version of the Helium Wallet App are testing tokens on Solana devnet.
+All tokens in the preview version of the Helium Wallet app are testing tokens on Solana devnet.
 These tokens have no value and should not be traded.
 
 :::
@@ -22,13 +22,13 @@ Solana migration for your wallet and hotspots before it happens. A snapshot was 
 
 ## Enable Solana Preview
 
-On the main screen of the helium walelt app, click the settings cog in the upper left hand corner.
+On the main screen of the Helium Wallet app, click the Settings icon in the upper-left corner.
 
 <div className="img-center">
   <img className="appscreenbanner" src={useBaseUrl('img/solana/migration-settings.png')} />
 </div>
 
-Then, enable the Solana Preview. You can always disable the Solana preview in the same way to see
+Then, enable the Solana preview mode. You can always disable the Solana preview mode in the same way to see
 your real assets.
 
 <div className="img-center">
@@ -40,7 +40,7 @@ your real assets.
 You can now explore your hotspots by clicking the Collectibles Tab. From here, you will be able to
 test claiming rewards with testing tokens.
 
-Let us know via discord if you experience any issues!
+Let us know via Discord if you experience any issues!
 
 <div className="img-center">
   <img className="appscreenbanner" src={useBaseUrl('img/solana/migration-collectibles.png')} />
@@ -48,4 +48,4 @@ Let us know via discord if you experience any issues!
 
 ## Ledger Users
 
-Ledger is not yet supported for the wallet app. Updates on migrating ledgers will come soon!
+Ledger is not yet supported for the Helium Wallet app migration, but it will be supported through the Helium Ledger CLI. More information on migrating Ledger wallets will come soon! See the [Ledger wallet migration guide](/solana/migration/wallet-user) for guidance on how to migrate Ledger wallets using the Helium Ledger CLI.
