--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -77,6 +77,7 @@ The following are migration guides for different users of Helium:
 - [Wallet User](/solana/migration/wallet-user)
 - [LoRaWAN Network User](/solana/migration/network-user)
 - [Maker](/solana/migration/maker)
+- [Wallet App User](./solana/migration/wallet-user)
 
 ---
 
