remove emojis from sidebar

--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -2,7 +2,7 @@
 id: iot-token
 title: The Helium IOT Network Token
 pagination_label: IOT Token
-sidebar_label: 🚧 IOT Token 🚧
+sidebar_label: IOT Token
 description: Helium IOT Network Token Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /helium-tokens/iot
