--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -2,7 +2,7 @@
 id: mobile-token
 title: The Helium MOBILE Network Token
 pagination_label: MOBILE Token
-sidebar_label: 🚧 MOBILE Token 🚧
+sidebar_label: MOBILE Token
 description: Helium MOBILE Network Token Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /helium-tokens/mobile
