remove emojis from sidebar

--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -2,7 +2,7 @@
 id: helium-hotspot-app
 title: Helium Hotspot App (Is Being Deprecated)
 pagination_label: Helium Hotspot App
-sidebar_label: 🚫 Helium Hotspot App 🚫
+sidebar_label: Helium Hotspot App
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /mine-hnt/helium-hotspot-app
