--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -43,12 +43,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Learn More about Solana{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
-      <a className="quicklink quicklinkgreen " href="/solana/primer">
-        Get a Primer on Solana Programming{' '}
+      <a className="quicklink quicklinkgreen " href="/solana/migration/hotspot-operator">
+        Read the Migration Guides{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
       <a className="quicklink quicklinkred" href="/oracles">
-        Learn about Oracles{' '}
+        Get a Primer on Solana Programming{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
     </div>
@@ -67,8 +67,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         produce and are compensated in IOT, the native cryptocurrency of the Helium blockchain. The
         Helium blockchain is a new, open source, public blockchain created entirely to incentivize
         the creation of physical, decentralized wireless networks. Today, the Helium IoT Network,
-        and its <a href="https://explorer.helium.com/hotspots">hundreds of thousands of Hotspots</a>
-        , provide access to the largest LoRaWAN Network in the world.
+        and its <a href="https://explorer.helium.com/hotspots">hundreds of thousands of Hotspots</a>,
+        provide access to the largest LoRaWAN Network in the world.
       </p>
       <p>
         If, at any time, you don't find what you need, join us in{' '}
